# whisperserve

./: .env  .env.integration  .env.sample  .gitignore  .tool-versions  Tiltfile  alembic.ini  cody-system.md  pyproject.toml  pyrightconfig.json
_dev-env/: docker-compose.testdata.yml  ensure-minio.bash  nginx-testdata.conf  wait-for-postgres.bash  wait-for-temporal.bash
_dev-env/k8s/: postgres.yaml
_dev-env/k8s/minio/: minio.yaml
_dev-env/k8s/postgres/: postgres.yaml
_dev-env/k8s/temporal/: Dockerfile  temporal.yaml
app/: cli.py  logging.py
app/api/: deps.py  otel_setup.py  runner.py  server.py
app/api/routes/: jobs.py
app/api/schemas/: jobs.py
app/db/: __init__.py  engine.py
app/models/: __init__.py  job.py
app/temporal/: client.py
app/utils/: config.py  config_utils.py  jwt_config.py  jwt_utils.py  migrations.py  otel.py  s3.py
app/worker/: models.py  processor.py  runner.py
app/worker/activities/: __init__.py  download.py  interfaces.py  registry.py  status.py  transcribe.py
app/worker/backends/: base.py  factory.py  mock.py  whisperx_cpu_backend.py
app/worker/workflows/: __init__.py  transcription.py
doc/llm/: base.md
migrations/: env.py
migrations/versions/: 0ff973566f8a_create_initial_tables.py  6f15de8af999_add_attempt_count_and_max_attempts_to_.py
scripts/: check-config.bash  check-config.py  generate-jwt.bash  generate-jwt.py  integration-ci.bash  prepare-integration-test.bash  run-dev.bash  run-integration-test.bash  setup-env.bash  svc-down-integration.bash  svc-down.bash  svc-up-integration.bash  svc-up.bash  wait-for-api.bash
test-data/: eisenhower-farewell_address-full-64kbps-cpu.base.json  eisenhower-farewell_address-full-64kbps-cpu.largev2.json  eisenhower-farewell_address-short-64kbps-cpu.base.json  eisenhower-farewell_address-short-64kbps-cpu.largev2.json
tests/: conftest.py
tests/integration/: test_basic.py  test_transcription.py
tests/worker/backends/: __init__.py  test_mock_backend.py  test_whisperx_cpu_backend.py
